rebased on unicorn-cuba-base stack; now compatible with httpthumbnailer-client v1.0.0; new error messages and status codes

--- a/spec/test.cfg
+++ b/spec/test.cfg
@@ -1,6 +1,5 @@
-s3_key 'abc', 'xyz'
-s3_bucket 'test'
-thumbnailer_url 'http://test'
+s3_key 'AKIAJMUYVYOSACNXLPTQ', 'MAeGhvW+clN7kzK3NboASf3/kZ6a81PRtvwMZj4Y'
+s3_bucket 'issthumbtest'
 
 thumbnail_class 'small', 'crop', 128, 128, 'JPEG', :magick => 'option', :number => 42
 thumbnail_class 'tiny', 'pad', 32, 48, 'PNG'
