initial parser work

--- a/spec/full.cfg
+++ b/spec/full.cfg
@@ -1,11 +1,11 @@
 s3 key="AKIAJMUYVYOSACNXLPTQ" secret="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"
 
 path {
-	"uri"				"#{path}"
-	"hash"				"#{digest}.#{extension}"
-	"hash-name"			"#{digest}/#{name}.#{extension}"
+	"uri"			"#{path}"
+	"hash"			"#{digest}.#{extension}"
+	"hash-name"		"#{digest}/#{imagename}.#{extension}"
 	"structured"		"#{dirname}/#{digest}/#{basename}.#{extension}"
-	"structured-name"	"#{dirname}/#{digest}/#{basename}-#{name}.#{extension}"
+	"structured-name"	"#{dirname}/#{digest}/#{basename}-#{imagename}.#{extension}"
 }
 
 put "thumbnail" ":name_list" {
@@ -43,7 +43,7 @@ get "thumbnail" "v1" ":operation" ":width" ":height" ":options" {
 	source_s3 "original" bucket="rhoriginals" path="uri"
 
 	thumbnail "original" {
-		"thumbnail"	operation="#{operation}" width="#{width}" hegith="#{height}" options="#{options}" quality=84 format="jpeg"
+		"thumbnail"	operation="#{operation}" width="#{width}" height="#{height}" options="#{options}" quality=84 format="jpeg"
 	}
 
 	output_image "thumbnail" cache-control="max-age=31557600, s-maxage=0"
