refactored configuration specs and related classes

--- a/spec/support/handler.cfg
+++ b/spec/support/handler.cfg
@@ -1,9 +1,5 @@
 path {
-	"uri"			"#{path}"
 	"hash"			"#{digest}.#{extension}"
-	"hash-name"		"#{digest}/#{imagename}.#{extension}"
-	"structured"		"#{dirname}/#{digest}/#{basename}.#{extension}"
-	"structured-name"	"#{dirname}/#{digest}/#{basename}-#{imagename}.#{extension}"
 }
 
 get "thumbnail" "v1" ":operation" ":width" ":height" ":options" {
@@ -22,8 +18,11 @@ put "thumbnail" "v1" ":operation" ":width" ":height" ":options" {
 		"original" operation="#{operation}" width="#{width}" height="#{height}" options="#{options}" quality=84 format="jpeg"
 	}
 
-	store_file root="/tmp" path="hash"
+	store_file "original" root="/tmp" path="hash"
 
 	output_image "original"
+}
+
+post {
 }
 
