file source/store; cleanup; spec fixes

--- a/spec/support/file.cfg
+++ b/spec/support/file.cfg
@@ -1,10 +1,15 @@
 path {
 	"in"	"test.in"
 	"out"	"test.out"
+	"bad"	"../test.in"
 }
 
-put "small" {
+get "small" {
 	source_file "original" root="/tmp" path="in"
-	store_file "small" root="/tmp" path="out"
+	store_file "original" root="/tmp" path="out"
+}
+
+get "bad_path" {
+	source_file "original" root="/tmp" path="bad"
 }
 
