--- a/spec/support/full.cfg
+++ b/spec/support/full.cfg
@@ -11,16 +11,14 @@ path {
 put "thumbnail" ":name_list" {
 	thumbnail "input" {
 		"original"	operation="limit"	width=1080	height=1080	format="jpeg"	quality=95
-		"small"		operation="crop"	width=128	height=128	format="jpeg"							if_name_on="#{name_list}"
+		"small"		operation="crop"	width=128	height=128	format="jpeg"	if_name_on="#{name_list}"
 		"padded"	operation="pad"		width=128	height=128	format="jpeg"	background-color="gray" if_name_on="#{name_list}"
 	}
 
-	store_s3 {
-		"input"		bucket="rhthumbnails"	path="structured"		cache-control="max-age=31557600, s-maxage=0"
-		"original"	bucket="rhoriginals"	path="hash"
-		"small"		bucket="rhthumbnails"	path="structured-name"	cache-control="max-age=31557600, s-maxage=0" if_name_on="#{name_list}"
-		"padded"	bucket="rhthumbnails"	path="structured-name"	cache-control="max-age=31557600, s-maxage=0" if_name_on="#{name_list}"
-	}
+	store_s3 "input"	bucket="rhthumbnails"	path="structured"	cache-control="max-age=31557600, s-maxage=0" public=true
+	store_s3 "original"	bucket="rhoriginals"	path="hash"
+	store_s3 "small"	bucket="rhthumbnails"	path="structured-name"	cache-control="max-age=31557600, s-maxage=0" public=true if_name_on="#{name_list}"
+	store_s3 "padded"	bucket="rhthumbnails"	path="structured-name"	cache-control="max-age=31557600, s-maxage=0" public=true if_name_on="#{name_list}"
 
 	output_store_url {
 		"input"
