--- a/spec/support/full.cfg
+++ b/spec/support/full.cfg
@@ -15,10 +15,10 @@ put "thumbnail" ":name_list" {
 		"padded"	operation="pad"		width=128	height=128	format="jpeg"	background-color="gray" if_name_on="#{name_list}"
 	}
 
-	store_s3 "input"	bucket="rhthumbnails"	path="structured"	cache-control="max-age=31557600, s-maxage=0" public=true
+	store_s3 "input"	bucket="rhthumbnails"	path="structured"	cache-control="public, max-age=31557600, s-maxage=0" public=true
 	store_s3 "original"	bucket="rhoriginals"	path="hash"
-	store_s3 "small"	bucket="rhthumbnails"	path="structured-name"	cache-control="max-age=31557600, s-maxage=0" public=true if_name_on="#{name_list}"
-	store_s3 "padded"	bucket="rhthumbnails"	path="structured-name"	cache-control="max-age=31557600, s-maxage=0" public=true if_name_on="#{name_list}"
+	store_s3 "small"	bucket="rhthumbnails"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if_name_on="#{name_list}"
+	store_s3 "padded"	bucket="rhthumbnails"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if_name_on="#{name_list}"
 
 	output_store_url {
 		"input"
@@ -44,6 +44,6 @@ get "thumbnail" "v1" ":operation" ":width" ":height" ":options" {
 		"thumbnail"	operation="#{operation}" width="#{width}" height="#{height}" options="#{options}" quality=84 format="jpeg"
 	}
 
-	output_image "thumbnail" cache-control="max-age=31557600, s-maxage=0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
 }
 
