some refactoring around if_image_name_on stuff; new way of parsing attributes: used on s3

--- a/spec/support/full.cfg
+++ b/spec/support/full.cfg
@@ -11,19 +11,19 @@ path {
 put "thumbnail" ":name_list" {
 	thumbnail "input" {
 		"original"	operation="limit"	width=1080	height=1080	format="jpeg"	quality=95
-		"small"		operation="crop"	width=128	height=128	format="jpeg"	if_name_on="#{name_list}"
-		"padded"	operation="pad"		width=128	height=128	format="jpeg"	background-color="gray" if_name_on="#{name_list}"
+		"small"		operation="crop"	width=128	height=128	format="jpeg"	if_image_name_on="#{name_list}"
+		"padded"	operation="pad"		width=128	height=128	format="jpeg"	background-color="gray" if_image_name_on="#{name_list}"
 	}
 
 	store_s3 "input"	bucket="rhthumbnails"	path="structured"	cache-control="public, max-age=31557600, s-maxage=0" public=true
 	store_s3 "original"	bucket="rhoriginals"	path="hash"
-	store_s3 "small"	bucket="rhthumbnails"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if_name_on="#{name_list}"
-	store_s3 "padded"	bucket="rhthumbnails"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if_name_on="#{name_list}"
+	store_s3 "small"	bucket="rhthumbnails"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if_image_name_on="#{name_list}"
+	store_s3 "padded"	bucket="rhthumbnails"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if_image_name_on="#{name_list}"
 
 	output_store_url {
 		"input"
-		"small"		if_name_on="#{name_list}"
-		"padded"	if_name_on="#{name_list}"
+		"small"		if_image_name_on="#{name_list}"
+		"padded"	if_image_name_on="#{name_list}"
 	}
 }
 
