--- a/spec/support/full.cfg
+++ b/spec/support/full.cfg
@@ -2,10 +2,10 @@ s3 key="AKIAJMUYVYOSACNXLPTQ" secret="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"
 
 path {
 	"uri"			"#{path}"
-	"hash"			"#{digest}.#{extension}"
-	"hash-name"		"#{digest}/#{imagename}.#{extension}"
-	"structured"		"#{dirname}/#{digest}/#{basename}.#{extension}"
-	"structured-name"	"#{dirname}/#{digest}/#{basename}-#{imagename}.#{extension}"
+	"hash"			"#{digest}.#{mimeextension}"
+	"hash-name"		"#{digest}/#{imagename}.#{mimeextension}"
+	"structured"		"#{dirname}/#{digest}/#{basename}.#{mimeextension}"
+	"structured-name"	"#{dirname}/#{digest}/#{basename}-#{imagename}.#{mimeextension}"
 }
 
 put "thumbnail" ":name_list" {
@@ -15,10 +15,10 @@ put "thumbnail" ":name_list" {
 		"padded"	operation="pad"		width=128	height=128	format="jpeg"	background-color="gray" if-image-name-on="#{name_list}"
 	}
 
-	store_s3 "input"	bucket="rhthumbnails"	path="structured"	cache-control="public, max-age=31557600, s-maxage=0" public=true
-	store_s3 "original"	bucket="rhoriginals"	path="hash"
-	store_s3 "small"	bucket="rhthumbnails"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if-image-name-on="#{name_list}"
-	store_s3 "padded"	bucket="rhthumbnails"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if-image-name-on="#{name_list}"
+	store_s3 "input"	bucket="httpimagestoretest"	path="structured"	cache-control="public, max-age=31557600, s-maxage=0" public=true
+	store_s3 "original"	bucket="httpimagestoretest"	path="hash"
+	store_s3 "small"	bucket="httpimagestoretest"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if-image-name-on="#{name_list}"
+	store_s3 "padded"	bucket="httpimagestoretest"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if-image-name-on="#{name_list}"
 
 	output_store_url {
 		"input"
