fixed path rendering with ./; fixed digest cache; updated test config

--- a/spec/support/full.cfg
+++ b/spec/support/full.cfg
@@ -15,10 +15,10 @@ put "thumbnail" ":name_list" {
 		"padded"	operation="pad"		width=128	height=128	format="jpeg"	background-color="gray" if-image-name-on="#{name_list}"
 	}
 
-	store_s3 "input"	bucket="httpimagestoretest"	path="structured"	cache-control="public, max-age=31557600, s-maxage=0" public=true
-	store_s3 "original"	bucket="httpimagestoretest"	path="hash"
-	store_s3 "small"	bucket="httpimagestoretest"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if-image-name-on="#{name_list}"
-	store_s3 "padded"	bucket="httpimagestoretest"	path="structured-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if-image-name-on="#{name_list}"
+	store_s3 "input"	bucket="httpimagestoretest"		path="hash"		cache-control="public, max-age=31557600, s-maxage=0" public=true
+	store_s3 "original"	bucket="httpimagestoretest-originals"	path="hash"
+	store_s3 "small"	bucket="httpimagestoretest"		path="hash-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if-image-name-on="#{name_list}"
+	store_s3 "padded"	bucket="httpimagestoretest"		path="hash-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if-image-name-on="#{name_list}"
 
 	output_store_url {
 		"input"
