--- a/spec/support/full.cfg
+++ b/spec/support/full.cfg
@@ -2,10 +2,10 @@ s3 key="AKIAJMUYVYOSACNXLPTQ" secret="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"
 
 path {
 	"uri"			"#{path}"
-	"hash"			"#{digest}.#{mimeextension}"
-	"hash-name"		"#{digest}/#{imagename}.#{mimeextension}"
-	"structured"		"#{dirname}/#{digest}/#{basename}.#{mimeextension}"
-	"structured-name"	"#{dirname}/#{digest}/#{basename}-#{imagename}.#{mimeextension}"
+	"hash"			"#{input_digest}.#{image_mime_extension}"
+	"hash-name"		"#{input_digest}/#{image_name}.#{image_mime_extension}"
+	"structured"		"#{dirname}/#{input_digest}/#{basename}.#{image_mime_extension}"
+	"structured-name"	"#{dirname}/#{input_digest}/#{basename}-#{image_name}.#{image_mime_extension}"
 }
 
 put "thumbnail" ":name_list" {
