example configuration update

--- a/spec/support/full.cfg
+++ b/spec/support/full.cfg
@@ -1,49 +1,183 @@
-s3 key="AKIAJMUYVYOSACNXLPTQ" secret="MAeGhvW+clN7kzK3NboASf3/kZ6a81PRtvwMZj4Y"
+s3 key="AKIAJ672BX2L6KYBFWSQ" secret="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" ssl=false
 
-path {
-	"uri"			"#{path}"
-	"hash"			"#{input_digest}.#{image_mime_extension}"
-	"hash-name"		"#{input_digest}/#{image_name}.#{image_mime_extension}"
-	"structured"		"#{dirname}/#{input_digest}/#{basename}.#{image_mime_extension}"
-	"structured-name"	"#{dirname}/#{input_digest}/#{basename}-#{image_name}.#{image_mime_extension}"
+# API - v2 thumbnails - /thumbnails/<path>[?<query>]
+path "hash"       "#{input_digest}.#{image_mime_extension}"
+path "path"       "#{path}"
+path "uri_part"   "/thumbnails/#{input_digest}/#{name}.#{image_mime_extension}"
+
+## User uploaded content - always JPEG converted, not bigger than 2160x2160 and in hight quality compression
+post "iss" "v2" "thumbnails" "pictures" "/(?<name>.+?)(\\.[^\\.]+)?$/" {
+	thumbnail "input" "original" operation="limit" width=2160 height=2160 format="jpeg" quality=95
+	store_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	output_store_path "original" path="uri_part"
 }
 
-put "thumbnail" ":name_list" {
-	thumbnail "input" {
-		"original"	operation="limit"	width=1080	height=1080	format="jpeg"	quality=95
-		"small"		operation="crop"	width=128	height=128	format="jpeg"	if-image-name-on="#{name_list}"
-		"padded"	operation="pad"		width=128	height=128	format="jpeg"	background-color="gray" if-image-name-on="#{name_list}"
-	}
-
-	store_s3 "input"	bucket="httpimagestoretest"		path="hash"		cache-control="public, max-age=31557600, s-maxage=0" public=true
-	store_s3 "original"	bucket="httpimagestoretest-originals"	path="hash"
-	store_s3 "small"	bucket="httpimagestoretest"		path="hash-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if-image-name-on="#{name_list}"
-	store_s3 "padded"	bucket="httpimagestoretest"		path="hash-name"	cache-control="public, max-age=31557600, s-maxage=0" public=true if-image-name-on="#{name_list}"
-
-	output_store_url {
-		"input"
-		"small"		if-image-name-on="#{name_list}"
-		"padded"	if-image-name-on="#{name_list}"
-	}
+post "iss" "v2" "thumbnails" "pictures" {
+	thumbnail "input" "original" operation="limit" width=2160 height=2160 format="jpeg" quality=95
+	store_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	output_store_path "original"
 }
 
-post "original" {
-	thumbnail "input" {
-		"original"	operation="limit"	width=1080	height=1080	format="jpeg"	quality=95
-	}
-
-	store_s3 "original"	bucket="rhoriginals" path="hash"
-
-	output_store_path	"original"
+put "iss" "v2" "thumbnails" "pictures" {
+	thumbnail "input" "original" operation="limit" width=2160 height=2160 format="jpeg" quality=95
+	store_s3 "original" bucket="test.s3.whatclinic.com" path="path" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	output_store_path "original"
 }
 
-get "thumbnail" "v1" ":operation" ":width" ":height" ":options" {
-	source_s3 "original" bucket="rhoriginals" path="uri"
+## Uploaded by us for use on the website - whatever we send
+post "iss" "v2" "thumbnails" "images" "/(?<name>.+?)(\\.[^\\.]+)?$/" {
+	identify "input"
+	store_s3 "input" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	output_store_path "input" path="uri_part"
+}
 
-	thumbnail "original" {
-		"thumbnail"	operation="#{operation}" width="#{width}" height="#{height}" options="#{options}" quality=84 format="jpeg"
-	}
+post "iss" "v2" "thumbnails" "images" {
+	identify "input"
+	store_s3 "input" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	output_store_path "input"
+}
 
+put "iss" "v2" "thumbnails" "images" {
+	identify "input"
+	store_s3 "input" bucket="test.s3.whatclinic.com" path="path" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	output_store_path "input"
+}
+
+## Thumbailing - keep input format; default JPEG quality is 85
+### Data URI
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&:width" "&:height" "&:operation?crop" "&:float-y?0.5" "&:background-color?white" "&data-uri=true" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="#{operation}" width="#{width}" height="#{height}" options="float-y:#{float-y},background-color:#{background-color},quality:30"
+	output_data_uri_image "thumbnail" cache-control="s-maxage=31557600"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&:width" "&:height?1080" "&:operation?fit" "&:float-y?0.5" "&:background-color?white" "&data-uri=true" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="#{operation}" width="#{width}" height="#{height}" options="float-y:#{float-y},background-color:#{background-color},quality:30"
+	output_data_uri_image "thumbnail" cache-control="s-maxage=31557600"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&:height" "&:width?1080" "&:operation?fit" "&:float-y?0.5" "&:background-color?white" "&data-uri=true" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="#{operation}" width="#{width}" height="#{height}" options="float-y:#{float-y},background-color:#{background-color},quality:30"
+	output_data_uri_image "thumbnail" cache-control="s-maxage=31557600"
+}
+
+### Thumbnailing based on query string parameters
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&:width" "&:height" "&:operation?crop" "&:float-y?0.5" "&:background-color?white" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="#{operation}" width="#{width}" height="#{height}" options="float-y:#{float-y},background-color:#{background-color}"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&:width" "&:height?1080" "&:operation?fit" "&:float-y?0.5" "&:background-color?white" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="#{operation}" width="#{width}" height="#{height}" options="float-y:#{float-y},background-color:#{background-color}"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&:height" "&:width?1080" "&:operation?fit" "&:float-y?0.5" "&:background-color?white" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="#{operation}" width="#{width}" height="#{height}" options="float-y:#{float-y},background-color:#{background-color}"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+### Thumbnailing to predefined thumbnail sepcs
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=search" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="162" height="162" options="background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=search_v2" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="crop" width="242" height="162" options="float-y:0.2,background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+# Special version of search type that can be included in Data URL; will be cache by Varnish only for it's own use in ESI
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=search_v2_dataurl" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="crop" width="242" height="162" options="float-y:0.2,background-color:0xF0F0F0,quality:30"
+	output_data_uri_image "thumbnail" cache-control="s-maxage=31557600"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=mobile_search_v2" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="98" height="148"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+# Special version of search type that can be included in Data URL; will be cache by Varnish only for it's own use in ESI
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=mobile_search_v2_dataurl" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="98" height="148" options="quality:30"
+	output_data_uri_image "thumbnail" cache-control="s-maxage=31557600"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=original" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="crop" width="input" height="input" options="background-color:white"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=search_thumb" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="28" height="28" options="background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=brochure" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="264" height="264" options="background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=brochure_thumb" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="40" height="40" options="background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=admin" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="160" height="160" options="background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=admin_thumb" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="65" height="65" options="background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=treatment_thumb" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="80" height="60" options="background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=staff_member_thumb" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="50" height="50" options="background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=consultation" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="126" height="126" options="background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=clinic_google_map_thumb" {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="pad" width="74" height="74" options="background-color:0xF0F0F0"
+	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
+}
+
+get "iss" "v2" "thumbnails" "/(|.+?\\/)(?<input_digest>[0-f]{16}).*\\.(?<image_mime_extension>...)$/" "&type=large"  {
+	source_s3 "original" bucket="test.s3.whatclinic.com" path="hash" prefix="dev/httpimagestore/v1/" cache-root="/var/cache/httpimagestore/s3"
+	thumbnail "original" "thumbnail" operation="limit" width="1200" height="900" interlace="PlaneInterlace"
 	output_image "thumbnail" cache-control="public, max-age=31557600, s-maxage=0"
 }
 
