--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ features.*
 gatling/index-1k.csv
 gatling/101_ObjectCategories/
 gatling/101_ObjectCategories.tar.gz
+gatling/gatling-charts-highcharts-bundle-*/
+gatling/gatling-charts-highcharts-bundle-*-bundle.zip
 features/support/thumbniler.log.access
 .DS_Store
 *.gem
